{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 20,
  "lineage": "cd8a9a24-fa6b-2985-4b58-11e857f9082b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "new_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.223.66.54",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-11-17T11:46:05.631-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/chtsh-441120/regions/us-central1/addresses/new-flask-app-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "new-flask-app-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "chtsh-441120",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chtsh-441120/regions/us-central1/addresses/new-flask-app-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/chtsh-441120/zones/us-central1-a/instances/new-flask-server"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-17T12:11:53.088-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/chtsh-441120/global/firewalls/allow-http-traffic",
            "log_config": [],
            "name": "allow-http-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/chtsh-441120/global/networks/default",
            "priority": 1000,
            "project": "chtsh-441120",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chtsh-441120/global/firewalls/allow-http-traffic",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_5000",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-17T12:11:53.223-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/chtsh-441120/global/firewalls/allow-http-5000",
            "log_config": [],
            "name": "allow-http-5000",
            "network": "https://www.googleapis.com/compute/v1/projects/chtsh-441120/global/networks/default",
            "priority": 1000,
            "project": "chtsh-441120",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chtsh-441120/global/firewalls/allow-http-5000",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "new_flask_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241112",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/chtsh-441120/zones/us-central1-a/disks/new-flask-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-17T12:23:09.527-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/chtsh-441120/zones/us-central1-a/instances/new-flask-server",
            "instance_id": "5076299705128316482",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "MEILISEARCH_MASTER_KEY": "super-secure-api-key"
            },
            "metadata_fingerprint": "s_pTAS7CQiI=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update and install packages\napt-get update\napt-get install -y python3 python3-pip\napt-get install -y --no-install-recommends git curl\npip3 install flask gunicorn\n\n# Set env varibles\nexport MEILISEARCH_MASTER_KEY=\"super-secure-api-key\"\nexport MEILISEARCH_HOST=\"http://localhost:7700/\"\n\n# Setup and start meilisearch\ncurl -L https://install.meilisearch.com | sh\nnohup ./meilisearch --master-key=$MEILISEARCH_MASTER_KEY \u003e /va [...]
            "name": "new-flask-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.223.66.54",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/chtsh-441120/global/networks/default",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/chtsh-441120/regions/us-central1/subnetworks/default",
                "subnetwork_project": "chtsh-441120"
              }
            ],
            "project": "chtsh-441120",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/chtsh-441120/zones/us-central1-a/instances/new-flask-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.new_static_ip"
          ]
        }
      ]
    }
  ]
}